--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "webpack --config webpack/prod.js",
     "devServer": "webpack serve --config webpack/dev.js",
-    "lint": "eslint --ext .js,.ts,.tsx .",
+    "lint": "eslint .",
     "test": "jest",
     "validateManifest": "validate-office-addin manifests/dev.manifest.xml && validate-office-addin manifests/prod.manifest.xml"
   },
@@ -16,6 +16,8 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.25.4",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.9.1",
     "@fluentui/react": "^8.120.7",
     "@jest/globals": "^29.7.0",
     "@microsoft/load-themed-styles": "^2.0.140",
@@ -41,6 +43,7 @@
     "eslint": "^9.9.1",
     "eslint-plugin-react": "^7.35.2",
     "file-saver": "^2.0.5",
+    "globals": "^15.9.0",
     "html-webpack-plugin": "^5.6.0",
     "ignore-styles": "^5.0.1",
     "jest": "^29.7.0",
