--- a/package.json
+++ b/package.json
@@ -7,77 +7,66 @@
   "scripts": {
     "build": "webpack --config webpack/prod.js",
     "devServer": "webpack serve --config webpack/dev.js",
-    "lint": "eslint --ext .js,.ts,.tsx .",
+    "lint": "eslint .",
     "test": "jest",
     "validateManifest": "validate-office-addin manifests/dev.manifest.xml && validate-office-addin manifests/prod.manifest.xml"
   },
-  "nyc": {
-    "all": true,
-    "exclude": [
-      "**/*.d.ts"
-    ],
-    "extension": [
-      ".ts",
-      ".tsx"
-    ],
-    "reporter": [
-      "html"
-    ]
-  },
   "dependencies": {
-    "@babel/core": "^7.23.3",
+    "@babel/core": "^7.25.2",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.23.3",
-    "@fluentui/react": "^8.112.9",
+    "@babel/preset-env": "^7.25.4",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.9.1",
+    "@fluentui/react": "^8.120.7",
     "@jest/globals": "^29.7.0",
-    "@microsoft/load-themed-styles": "^2.0.88",
-    "@microsoft/office-js": "^1.1.89",
-    "@reduxjs/toolkit": "^1.9.7",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
+    "@microsoft/load-themed-styles": "^2.0.140",
+    "@microsoft/office-js": "^1.1.93",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/file-saver": "^2.0.7",
-    "@types/office-js": "^1.0.360",
-    "@types/papaparse": "^5.3.11",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
+    "@types/office-js": "^1.0.418",
+    "@types/papaparse": "^5.3.14",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
-    "@typescript-eslint/typescript-estree": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
+    "@typescript-eslint/typescript-estree": "^8.4.0",
     "babel-loader": "^9.1.3",
-    "copy-webpack-plugin": "^11.0.0",
-    "core-js": "^3.33.2",
+    "copy-webpack-plugin": "^12.0.2",
+    "core-js": "^3.38.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.8.1",
-    "eslint": "^8.54.0",
-    "eslint-plugin-react": "^7.33.2",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react": "^7.35.2",
     "file-saver": "^2.0.5",
-    "html-webpack-plugin": "^5.5.3",
+    "globals": "^15.9.0",
+    "html-webpack-plugin": "^5.6.0",
     "ignore-styles": "^5.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-mock-extended": "^3.0.5",
+    "jest-mock-extended": "^3.0.7",
     "jsdom-global": "^3.0.2",
     "node-fetch": "^3.3.2",
-    "nyc": "^15.1.0",
     "office-addin-validator": "^1.0.5",
     "papaparse": "^5.4.1",
-    "query-string": "^8.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.19.0",
+    "query-string": "^9.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
     "source-map": "^0.7.4",
-    "style-loader": "^3.3.3",
-    "ts-jest": "^29.1.1",
+    "style-loader": "^4.0.0",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.10.0"
+    "webpack-dev-server": "^5.1.0",
+    "webpack-merge": "^6.0.1"
   }
 }
