--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@microsoft/load-themed-styles": "^2.0.140",
     "@microsoft/office-js": "^1.1.93",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stylistic/eslint-plugin": "^2.8.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
