--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-mock-extended": "^3.0.7",
+    "jest-util": "^30.0.5",
     "jsdom-global": "^3.0.2",
     "node-fetch": "^3.3.2",
     "office-addin-validator": "^1.0.5",
