--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "scheduler": "^0.26.0",
     "source-map": "^0.7.4",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.2.5",
@@ -75,5 +76,8 @@
     "webpack-dev-server": "^5.1.0",
     "webpack-merge": "^6.0.1"
   },
-  "packageManager": "yarn@4.9.2"
+  "packageManager": "yarn@4.9.2",
+  "devDependencies": {
+    "@types/scheduler": "^0"
+  }
 }
