--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "html-webpack-plugin": "^5.6.0",
     "ignore-styles": "^5.0.1",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.5",
+    "jest-fixed-jsdom": "^0.0.9",
     "jest-mock-extended": "^3.0.7",
     "jest-util": "^30.0.5",
     "jsdom-global": "^3.0.2",
