--- a/package.json
+++ b/package.json
@@ -12,44 +12,45 @@
     "validateManifest": "validate-office-addin manifests/dev.manifest.xml && validate-office-addin manifests/prod.manifest.xml"
   },
   "dependencies": {
-    "@babel/core": "^7.28.5",
+    "@babel/core": "^7.29.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.28.5",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.39.1",
-    "@fluentui/react-components": "^9.72.7",
-    "@fluentui/react-icons": "^2.0.315",
-    "@fluentui/react-theme": "^9.2.0",
+    "@babel/preset-env": "^7.29.0",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
+    "@fluentui/react-components": "^9.72.11",
+    "@fluentui/react-icons": "^2.0.318",
+    "@fluentui/react-theme": "^9.2.1",
     "@griffel/jest-serializer": "^1.1.34",
     "@jest/globals": "^30.2.0",
-    "@microsoft/load-themed-styles": "^2.1.21",
+    "@microsoft/load-themed-styles": "^2.1.26",
     "@microsoft/office-js": "^1.1.110",
-    "@reduxjs/toolkit": "^2.11.0",
-    "@stylistic/eslint-plugin": "^5.6.1",
+    "@reduxjs/toolkit": "^2.11.2",
+    "@stylistic/eslint-plugin": "^5.7.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
     "@types/file-saver": "^2.0.7",
-    "@types/office-js": "^1.0.560",
-    "@types/papaparse": "^5.5.0",
-    "@types/react": "^19.2.7",
+    "@types/office-js": "^1.0.570",
+    "@types/papaparse": "^5.5.2",
+    "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^8.48.0",
-    "@typescript-eslint/parser": "^8.48.0",
-    "@typescript-eslint/typescript-estree": "^8.48.0",
+    "@types/scheduler": "^0.26.0",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "@typescript-eslint/typescript-estree": "^8.54.0",
     "babel-loader": "^10.0.0",
     "copy-webpack-plugin": "^13.0.1",
-    "core-js": "^3.47.0",
+    "core-js": "^3.48.0",
     "cross-env": "^10.1.0",
-    "css-loader": "^7.1.2",
-    "eslint": "^9.39.1",
+    "css-loader": "^7.1.3",
+    "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
     "file-saver": "^2.0.5",
-    "globals": "^16.5.0",
-    "html-webpack-plugin": "^5.6.5",
+    "globals": "^17.3.0",
+    "html-webpack-plugin": "^5.6.6",
     "ignore-styles": "^5.0.1",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
@@ -61,25 +62,22 @@
     "office-addin-validator": "^1.0.5",
     "papaparse": "^5.5.3",
     "query-string": "^9.3.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-redux": "^9.2.0",
-    "react-router": "^7.12.0",
-    "react-router-dom": "^7.9.6",
+    "react-router": "^7.13.0",
+    "react-router-dom": "^7.13.0",
     "scheduler": "^0.27.0",
     "source-map": "^0.7.6",
     "style-loader": "^4.0.0",
-    "ts-jest": "^29.4.5",
+    "ts-jest": "^29.4.6",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
-    "webpack": "^5.103.0",
+    "webpack": "^5.105.0",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.2",
+    "webpack-dev-server": "^5.2.3",
     "webpack-merge": "^6.0.1"
   },
-  "packageManager": "yarn@4.12.0",
-  "devDependencies": {
-    "@types/scheduler": "^0.26.0"
-  }
+  "packageManager": "yarn@4.12.0"
 }
